--- a/Flashcard Ana 2B/style.css
+++ b/Flashcard Ana 2B/style.css
@@ -1,5 +1,10 @@
+:root{
+    --texto-principal:#FFFFFF;
+    --tesxto-pergunta:#FFFFFF;
+    --texto-resposta:#FFFFFF;
+}
 body {
-    background-color: rgb(223, 113, 190);
+    background:url('patinho.avif');
     font-family: Bai Jamjuree;
 }
 
@@ -7,19 +12,23 @@ body {
     display: flex;
 }
 .cartao { 
+    border-radius: 0.6rem;
 margin: 1rem 1rem;
-background-color: rgb(230, 171, 215);
+background-color:  rgb(255, 235, 169);
+border:3px solid var(--tesxto-pergunta);
 height: 20rem;
 flex-grow: 1;
 flex-basis: calc(33% - 6rem);
 }
 .cartao__conteudo{
+    border-radius: 0.6rem;
     text-align: center;
-    background-color: rgb(230, 171, 215);
+    background-color:rgb(252, 222, 125);
     height: 100%;
 }
 .cartao__conteudo h3{
-    background-color: rgb(230, 112, 177);
+    color: var(--texto-principal);
+    border: 1px solid var(--tesxto-pergunta);
     text-align: left;
     padding: 0.5rem;
     position: absolute;
@@ -28,7 +37,19 @@ flex-basis: calc(33% - 6rem);
     font-size: 1vw;
 
 }
+.cartao__conteudo__pergunta p{
+    color: var(--tesxto-pergunta);
+    font-weight: 600;
+    font-size: 20px;
 
+}
+.cartao__conteudo__resposta p {
+    color: var(--texto-resposta);
+    font-weight: 900;
+    font-size: 20px;
+    padding-top: 1em;
+
+}
 
 footer {
     background-color: black;
