--- a/Flashcard Ana 2B/style.css
+++ b/Flashcard Ana 2B/style.css
@@ -3,52 +3,79 @@
     --tesxto-pergunta:#FFFFFF;
     --texto-resposta:#FFFFFF;
 }
+
 body {
-    background:url('patinho.avif');
+    background: url('patinho.avif');
     font-family: Bai Jamjuree;
 }
 
 #container{
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 3rem;
+    padding: 4rem;
 }
-.cartao { 
-    border-radius: 0.6rem;
-margin: 1rem 1rem;
-background-color:  rgb(255, 235, 169);
-border:3px solid var(--tesxto-pergunta);
-height: 20rem;
-flex-grow: 1;
-flex-basis: calc(33% - 6rem);
+
+.cartao{
+    margin: 1rem 1rem;
+    height: 20rem;
+    flex-grow: 1;
+    flex-basis: calc(33% - 6rem);
+    background-color: rgb(255, 227, 136);
+    border-radius: 0.6em;
 }
+
 .cartao__conteudo{
     border-radius: 0.6rem;
     text-align: center;
-    background-color:rgb(252, 222, 125);
+    border: 1px solid var(--texto-principal);
     height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 300ms ease-in-out;
+    
 }
+
 .cartao__conteudo h3{
     color: var(--texto-principal);
-    border: 1px solid var(--tesxto-pergunta);
+    border: 1px solid var(--texto-principal);
     text-align: left;
     padding: 0.5rem;
     position: absolute;
     margin: 0.6rem;
     border-radius: 0.6rem;
     font-size: 1vw;
-
+    backface-visibility: hidden;
 }
+
 .cartao__conteudo__pergunta p{
-    color: var(--tesxto-pergunta);
+    color: var(--texto-pergunta);
     font-weight: 600;
     font-size: 20px;
-
+    margin-top: 4rem;
 }
-.cartao__conteudo__resposta p {
+
+.cartao__conteudo__resposta p{
     color: var(--texto-resposta);
     font-weight: 900;
-    font-size: 20px;
+    font-size: 24px;
     padding-top: 1em;
+}
 
+.cartao.active .cartao__conteudo {
+    transform: rotateY(180deg);
+    background-color: rgba(255, 227, 136, 0.2);
+}
+
+.cartao__conteudo__pergunta,
+.cartao__conteudo__resposta{
+    backface-visibility: hidden;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+.cartao__conteudo__resposta{
+    transform: rotateY(180deg);
 }
 
 footer {
@@ -64,4 +91,17 @@ footer p {
     text-align: center;
     font-size: 0.6rem;
     margin-top: 0.5rem;
+}
+@media (max-widht:560px) {
+.cartao{
+    flex:1 0 calc(100-1rem)
+}
+.cartao__conteudo h3{
+    font-size: 3vw;
+}
+.cartao__conteudo p {
+    font-size: 4vw;
+}
+
+
 }
